test/corpus/2_weave/1_gathers.txt
===
.BAA. Gathers
===
"What's that?" my master asked.
	*	"I am somewhat tired[."]," I repeated.
		"Really," he responded. "How deleterious."
	*	"Nothing, Monsieur!"[] I replied.
		"Very good, then."
	*  "I said, this journey is appalling[."] and I want no more of it."
	"Ah," he replied, not unkindly. "I see you are feeling frustrated. Tomorrow, things will improve."

- With that Monsieur Fogg left the room.
---

(ink
  (content_block
    (paragraph
      (text))
    (choice_block
      (choice
        (choice_marks
          (choice_mark))
        (content
          (text))
        (choice_only
          (content
            (text)))
        (content
          (text)))
      (paragraph
        (text)))
    (choice_block
      (choice
        (choice_marks
          (choice_mark))
        (content
          (text))
        (choice_only)
        (content
          (text)))
      (paragraph
        (text)))
    (choice_block
      (choice
        (choice_marks
          (choice_mark))
        (content
          (text))
        (choice_only
          (content
            (text)))
        (content
          (text)))
      (paragraph
        (text)))
    (gather_block
      (gather
        (gather_marks
          (gather_mark)))
      (paragraph
        (text)))))

===
.BAB. Options and Gathers form chains of content
===
== escape ==
I ran through the forest, the dogs snapping at my heels.

	* 	I checked the jewels[] were still in my pocket, and the feel of them brought a spring to my step. <>

	*  I did not pause for breath[] but kept on running. <>

	*	I cheered with joy. <>

- 	The road could not be much further! Mackie would have the engine running, and then I'd be safe.

	*	I reached the road and looked about[]. And would you believe it?
	* 	I should interrupt to say Mackie is normally very reliable[]. He's never once let me down. Or rather, never once, previously to that night.

-	The road was empty. Mackie was nowhere to be seen.
---

(ink
  (knot_block
    (knot
      (identifier))
    (content_block
      (paragraph
        (text))
      (choice_block
        (choice
          (choice_marks
            (choice_mark))
          (content
            (text))
          (choice_only)
          (content
            (text)
            (glue))))
      (choice_block
        (choice
          (choice_marks
            (choice_mark))
          (content
            (text))
          (choice_only)
          (content
            (text)
            (glue))))
      (choice_block
        (choice
          (choice_marks
            (choice_mark))
          (content
            (text)
            (glue))))
      (gather_block
        (gather
          (gather_marks
            (gather_mark)))
        (paragraph
          (text)))
      (choice_block
        (choice
          (choice_marks
            (choice_mark))
          (content
            (text))
          (choice_only)
          (content
            (text))))
      (choice_block
        (choice
          (choice_marks
            (choice_mark))
          (content
            (text))
          (choice_only)
          (content
            (text))))
      (gather_block
        (gather
          (gather_marks
            (gather_mark)))
          (paragraph
            (text))))))


===
.BABa. Corner case: Gathers can contain normal content items (unlike Choices)
===
- TODO: allow todos
- (label) ~ code = allowed
---
(ink
  (content_block
    (gather_block
      (gather
        (gather_marks
          (gather_mark)))
      (todo_comment))
    (gather_block
      (gather
        (gather_marks
          (gather_mark))
        (label
          (identifier)))
      (code
        (assignment
          (identifier)
          (identifier))))))

===
.BABb. Corner case: Gathers with a nested choice
===
- * choice, same level, therefore a sibling of the gather, not a child
---
(ink
  (content_block
    (gather_block
      (gather
        (gather_marks
          (gather_mark))))
    (choice_block
      (choice
        (choice_marks
          (choice_mark))
        (content
          (text))))))
