test/corpus/2_weave/3_tracking_a_weave.txt
===
.BCA. Gathers and options can be labelled
===
- (top)

=== meet_guard ===
The guard frowns at you.

* 	(greet) [Greet him]
	'Greetings.'
*	(get_out) 'Get out of my way[.'],' you tell the guard.

- 	'Hmm,' replies the guard.

*	{greet} 	'Having a nice day?' // only if you greeted him

* 	'Hmm?'[] you reply.
---

(ink
  (content_block
    (gather_block
      (gather
        label: (identifier))))
  (knot_block
    (knot
      name: (identifier))
    (content_block
      (content
        (text))
      (choice_block
        (choice
          label: (identifier)
          temporary: (content
            (text)))
        (content
          (text)))
      (choice_block
        (choice
          label: (identifier)
          main: (content
            (text))
          temporary: (content
            (text))
          final: (content
            (text))))
      (gather_block
        (gather
          (content
            (text))))
      (choice_block
        (choice
          condition: (identifier)
          main: (content
            (text)))
        (comment))
      (choice_block
        (choice
          main: (content
            (text))
          final: (content
            (text)))))))
