test/corpus/3_variables_and_logic/1_global_variables.txt
===
.CAA. Defining Global Variables
===
VAR knowledge_of_the_cure = false
VAR players_name = "Emilia, the \"escaped\" \ convict"
VAR empty_string = ""
VAR number_of_infected_people = 521
VAR current_epilogue = -> they_all_die_of_the_plague
---

(ink
  (global
    name: (identifier)
    value: (boolean))
  (global
    name: (identifier)
    value: (string))
  (global
    name: (identifier)
    value: (string))
  (global
    name: (identifier)
    value: (number))
  (global
    name: (identifier)
    value: (divert
      target: (identifier))))

===
.CAB. Printing Variables
===
VAR friendly_name_of_player = "Jackie"
VAR age = 23

My name is Jean Passepartout, but my friend's call me {friendly_name_of_player}. I'm {age} years old.
---

(ink
  (global
    (identifier)
    (string))
  (global
    (identifier)
    (number))
  (paragraph
    (text)
    (eval
      (identifier))
    (text)
    (eval
      (identifier))
    (text)))

===
.CAC. Evaluating strings
===
~ a_colour = "{~red|blue}"
---

(ink
  (code
    (assignment
      (identifier)
      (string
        (alternatives
          (content
            (text))
          (content
            (text)))))))

===
.CACa. Stress test: Evaluating insane strings
===
Caesar votes. #{vote("life")}

== function vote(v)
~ return "vote: { v:
 - "life":  <>👍<>
 - "death": <>👎<>
 - else:    <>🖕<>
}"
---

(ink
  (paragraph
    (text)
    (tag
      (eval
        (call
          (identifier)
          (args
            (string))))))
  (knot_block
    (knot
      (identifier)
      (params
        (param
          (identifier))))
    (code
      (return
        (string
          (cond_block
            (cond_arm
              (identifier)
              (eol))
            (cond_arm
              (string)
              (paragraph
                (glue)
                (text)
                (glue)))
            (cond_arm
              (string)
              (paragraph
                (glue)
                (text)
                (glue)))
            (cond_arm
              (else)
              (paragraph
                (glue)
                (text)
                (glue)))))))))
